--- a/news-app/src/App.css
+++ b/news-app/src/App.css
@@ -13,6 +13,19 @@
   }
 }
 
+.dark
+{
+  background-color: black;
+  color: white;
+}
+
+.light
+{
+  background-color: white;
+  color: black;
+}
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
