--- a/project-react-store/src/Header/styles/Header.css
+++ b/project-react-store/src/Header/styles/Header.css
@@ -4,7 +4,7 @@
 }
 
 h1, span, a {
-    color: #d9d9d9;
+    color: #fffcf2;
     vertical-align: middle;
 }
 
@@ -16,13 +16,13 @@ a {
 .header-container {
     width: 100%;
     height: 50px;
-    background-color: #284b63;
+    background-color: #403d39;
 }
 
 .nav-container {
     display: flex;
     height: 100%;
-    margin: 0 50px;
+    margin: 0 100px;
     justify-content: space-between;
 }
 
@@ -36,7 +36,6 @@ a {
     align-items: center;
     justify-content: space-between;
     width: 40%;
-
 }
 
 .nav-list-item {
@@ -50,5 +49,5 @@ a {
 
 
 .nav-list-item:hover {
-    background-color: #353535;
+    background-color: #252422;
 }
