--- a/project-react-store/src/Main/styles/Catalog.css
+++ b/project-react-store/src/Main/styles/Catalog.css
@@ -106,20 +106,29 @@ li {
     display: flex;
     flex-wrap: wrap;
     margin: 0;
-    
     border: #403d39 1px solid;
 }
 
 .product-item {
     border: #403d39 1px solid;
-    flex-basis: calc(33.33% - 20px); /* Adjust the width as needed */
+    flex-basis: calc(33.33% - 20px);
     margin: 10px;
     box-sizing: border-box;
-}
-
-.product-item {
     padding: 10px;
     border: #403d39 1px solid;
     background-color: #fff;
     text-align: center;
+}
+
+.product-img {
+    max-width: 100%;
+    max-height: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+.product-item:hover {
+  background-image:url("basket-svgrepo-com.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
