--- a/project-react-store/src/Header/styles/Header.css
+++ b/project-react-store/src/Header/styles/Header.css
@@ -4,11 +4,12 @@
 }
 
 .header-container * {
-    color: #fffcf2;
+    color: #FFFFFF;
     vertical-align: middle;
 }
 
 a {
+    cursor: pointer;
     text-decoration: none;
     margin: 0 auto;
 }
@@ -16,7 +17,7 @@ a {
 .header-container {
     width: 100%;
     height: 50px;
-    background-color: #403d39;
+    background-color: #1E3A8A;
 }
 
 .nav-container {
@@ -28,6 +29,7 @@ a {
 
 .nav-logo {
     margin: auto 0;
+    font-size: 30px;
 }
 
 .nav-list {
@@ -49,5 +51,5 @@ a {
 
 
 .nav-list-item:hover {
-    background-color: #252422;
+    background-color: #F19A33 ;
 }
