--- a/project-react-store/src/Main/styles/Catalog.css
+++ b/project-react-store/src/Main/styles/Catalog.css
@@ -5,7 +5,6 @@
 
 li a{
     color: #403d39;
-    
 }
 
 li {
@@ -14,17 +13,16 @@ li {
 
 .catalog-container {
     padding: 0 100px;
-    height: calc(100vh - 50px);
-    background-color: #ede9e1;
+    min-height: calc(100vh - 50px);
 }
 
 .categories-container {
     height: 30px;
-    background-color: #ccc5b9;
+    background-color: #F19A33;
 }
 
 .categories-container a {
-    color: #403d39;
+    color: #FFFFFF;
     font-size: 20px;
     
 }
@@ -34,7 +32,7 @@ li {
     text-align: center;
     justify-content: space-between;
     height: 100%;
-    gap: 15px;
+   
 }
 
 .category {
@@ -47,28 +45,32 @@ li {
     height: 100%;
     width: 100%;
     cursor: pointer;
-
 }
 
 .category:hover {
-    background-color: #403d39;
-    color: #fffcf2;
+    background-color: #1E3A8A;
+    color: #FFFFFF;
+}
+
+.selected {
+    background-color: #1E3A8A;
 }
 
 .content-container {
     display: flex;
-    height: calc(100% - 30px);
+    min-height: calc(100% - 30px);
     gap: 10px;
 }
 
 .side-container {
-    height: 100%;
+    
+    min-height: calc(100% - 30px);
     width: 20%;
-    background-color: #fffcf2;
+    background-color: #E8E8E8;
 }
 
 .side-container ul li {
-    border-bottom: #403d395e 1px solid;
+    border-bottom: #333333 1px solid;
     padding: 10px 5px;
 }
 
@@ -84,11 +86,11 @@ li {
     height: 30px;
     display: flex;
     justify-content: space-between;
-    border-bottom: #403d395e 1px solid;
+    border-bottom: #333333 1px solid;
 }
 
 .select-box {
-    background-color: #ccc5b9;
+    background-color: #E8E8E8 ;
     border-color: #403d39;
     color: #403d39;
     margin-bottom: 10px;
@@ -98,7 +100,6 @@ li {
 .products-outer-container {
     width: 80%;
     padding: 10px;
-    background-color: #fffcf2;
 }
 
 .products-list {
@@ -106,29 +107,58 @@ li {
     display: flex;
     flex-wrap: wrap;
     margin: 0;
-    border: #403d39 1px solid;
+    background-color: #F5F5F5;
 }
 
 .product-item {
+    display: flex;
+    flex-direction: column;
     border: #403d39 1px solid;
     flex-basis: calc(33.33% - 20px);
     margin: 10px;
     box-sizing: border-box;
-    padding: 10px;
-    border: #403d39 1px solid;
+    padding: 5px;
+    border: #403d3925 1px solid;
     background-color: #fff;
     text-align: center;
 }
 
 .product-img {
     max-width: 100%;
-    max-height: 100px;
     display: block;
     margin: 0 auto;
 }
 
-.product-item:hover {
-  background-image:url("basket-svgrepo-com.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
+.add-to-bag-container {
+    cursor: pointer;
+    background-color: #1E3A8A;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    min-height: 30px;
+}
+
+.add-to-bag-container:hover {
+    background-color: #F19A33;
+}
+
+.product-info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: #403d39;
+    height: 100%;
+}
+
+.product-info-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: #403d39;
+    margin: auto 0;
+}
+
+.product-info-container span {
+    text-align: left;
 }
